# scheduling_system

./: .gitignore  README.md  pyproject.toml
apps/appointments/: admin.py  models.py  schema.py
apps/appointments/migrations/: 0001_initial.py  0002_auto_20220115_2256.py  0003_alter_appointment_date.py  0004_alter_appointment_date.py  0005_alter_appointment_date.py  0006_alter_appointment_date.py  0007_alter_appointment_date.py  0008_alter_appointment_date.py  0009_alter_appointment_date.py  0010_alter_appointment_date.py  0011_alter_appointment_date.py  0012_alter_appointment_date.py  0013_alter_appointment_date.py  0014_alter_appointment_date.py  0015_alter_appointment_date.py
apps/reservations/: admin.py  models.py  schema.py
apps/reservations/migrations/: 0001_initial.py  0002_alter_reservation_date.py  0003_auto_20220115_2306.py
apps/schema/: schema.py
apps/users/: models.py  schema.py
apps/users/migrations/: 0001_initial.py  0002_auto_20220115_2351.py
config/: asgi.py  settings.py  urls.py  wsgi.py
